tests/mm0_mmu/fail/bad-sort213.mmu
-- bad modifier order
(sort s213 strict pure provable)